--- a/test_project1/src/main/webapp/admin/house.html
+++ b/test_project1/src/main/webapp/admin/house.html
@@ -53,7 +53,7 @@
 					<th class="sorting_asc">楼号</th>
 					<th class="sorting">单元号</th>
 					<th class="sorting">门牌号</th>
-					<th class="sorting">面积</th>
+					<th class="sorting">面积(㎡)</th>
 					<th class="text-center">操作</th>
 				</tr>
 				</thead>
@@ -102,7 +102,7 @@
 							<td><input  class="form-control" v-model="house.door" placeholder="门牌号">  </td>
 						</tr>
 						<tr>
-							<td>面积</td>
+							<td>面积(㎡)</td>
 							<td><input  class="form-control" v-model="house.area" placeholder="面积（㎡）">  </td>
 						</tr>
 					</table>
