--- a/test_project1/src/main/webapp/admin/index.html
+++ b/test_project1/src/main/webapp/admin/index.html
@@ -136,6 +136,11 @@
 				                    <i class="fa fa-circle-o"></i>员工列表
 				                </a>
 				            </li>
+							<li id="admin-login6">
+								<a href="department.html" target="iframe">
+									<i class="fa fa-circle-o"></i>部门列表
+								</a>
+							</li>
 				        </ul>                        
 				    </li>
 
