--- a/test_project1/src/main/webapp/admin/owner_list.html
+++ b/test_project1/src/main/webapp/admin/owner_list.html
@@ -60,14 +60,14 @@
             </tr>
             </thead>
             <tbody>
-            <tr v-for="owner in ownerList">
-                <td><input  type="checkbox" v-model="owner.check" @click="deleteSelection($event,owner)"  ></td>
-                <td>{{owner.name}}</td>
-                <td>{{owner.phone}}</td>
-                <td>{{owner.backphone}}</td>
-                <td>{{owner.name}}</td>
+            <tr v-for="ownerEntity in ownerList">
+                <td><input  type="checkbox" v-model="ownerEntity.check" @click="deleteSelection($event,owner)"  ></td>
+                <td>{{ownerEntity.owner.name}}</td>
+                <td>{{ownerEntity.owner.phone}}</td>
+                <td>{{ownerEntity.owner.bkphone}}</td>
+                <td>{{ownerEntity.address}}</td>
                 <td class="text-center">
-                    <button type="button" @click="editClick(owner)" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal" >修改</button>
+                    <button type="button" @click="editClick(ownerEntity)" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal" >修改</button>
                 </td>
             </tr>
             </tbody>
@@ -102,7 +102,7 @@
                     <tr>
                         <td>备用电话</td>
                         <td>
-                            <input select2 v-model="curowner.backphone"   class="form-control" type="text"/>
+                            <input select2 v-model="curowner.bkphone"   class="form-control" type="text"/>
                         </td>
                     </tr>
                 </table>
@@ -147,8 +147,8 @@
                     console.log(reason);
                 });
             },
-            editClick:function (owner) {
-                this.curowner = JSON.parse(JSON.stringify(owner))
+            editClick:function (ownerEntity) {
+                this.curowner = JSON.parse(JSON.stringify(ownerEntity.owner))
             },
             saveClick:function () {
                 var _this = this;
