完善数据库表结构，添加房屋状态，用以判断是否又业主入住，员工表增加入职时间

--- a/test_project1/src/main/webapp/admin/department.html
+++ b/test_project1/src/main/webapp/admin/department.html
@@ -170,7 +170,7 @@
                     this.selectedID.splice(idx,1);
                 }
             },
-            deleteHouse:function () {
+            deleteDepartment:function () {
                 var _this = this;
                 axios.post("/dep/deleteDepWithId.do",Qs.stringify({ids:this.selectedID},{indices:false}))
                     .then(function (response) {
